# CL_Signatures

./: .gitignore  .gitmodules  CMakeLists.txt  params.h  test_VRF.c  test_anonymous_credentials.c  test_cl_signatures.c
commitment_schemes/PoK_message/: PoK_message.c  PoK_message.h
commitment_schemes/PoK_signature/: PoK_signature.c  PoK_signature.h
sign_commitment/: sign_commitment.c  sign_commitment.h
signatures/schemeA/: CMakeLists.txt  schemeA.c  schemeA.h
signatures/schemeB/: CMakeLists.txt  schemeB.c  schemeB.h
signatures/schemeC/: CMakeLists.txt  schemeC.c  schemeC.h
signatures/schemeD/: CMakeLists.txt  schemeD.c  schemeD.h
utils/: CMakeLists.txt  utils.c  utils.h
